# engineering_notation

./: .gitignore  .travis.yml  license.txt  pyproject.toml  readme.md  setup.py  test.py  test_en.py
.github/workflows/: publish.yml  unittest.yml
engineering_notation/: __init__.py  __init__.pyi  eng_notation.py  engineering_notation.py  engineering_notation.pyi  version.py  version.pyi
test/: test.py
tests/: test_engnum.py  tests.py
